k8s-manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: weight-logger
  name: weight-logger
  labels:
    app: weight-logger

spec:
  replicas: 1
  selector:
    matchLabels:
      app: weight-logger
  template:
    metadata:
      labels:
        app: weight-logger
    spec:
      containers:
        - name: weight-logger
          image: ghcr.io/drola/weight-logger-pwa:latest
          ports:
            - name: web
              containerPort: 80
