k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weight-logger
  namespace: weight-logger
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: weight-logger
