k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weight-logger-ingress
  namespace: weight-logger
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: weight-logger-k8s-catdad-net-tls
      hosts:
        - weight-logger.k8s.catdad.net
  rules:
    - host: weight-logger.k8s.catdad.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: weight-logger
                port:
                  number: 80
